# ffxiv-matrix-bot

./: .gitignore  Cargo.toml  LICENSE  README.md  botconfig.toml
src/: countdown.rs  item.rs  job.rs  main.rs  party.rs  random.rs  status.rs  util.rs
